k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syra-staging
  labels:
    name: syra-staging
    environment: staging
